Date	Added
11/15
	* Added mobs_level_up option. [Valaris]
	  -Everytime a monster kills a play their level will increase and show levelup animation.
	  -Their 6 main stats and speed will increase as they level.
	  -They will recover 10% of the max hp of the player it kills.
	  -Player will gain extra exp based on how much stronger a monster is than normal.
	  -Skill estimation will show monsters current level (instead of reading from db).
	  -Will display level 99 aura if and when a monster hits level 99.
	  -They will not go higher than level 99.

11/14
	* Made the Advance jobchangers to kRO standars with the following;
	 - Checks if you are level 99/50 and 2nd class OR above.
	 - Checks if you have an Cart of Falcon equiped.
	 - Checks if you have any Quest Skills, stores a variable on you and gives them back
	   when you change to 1st advance class.
	 - Added minimum joblevel to change to an 2nd or 2-2 advance class to job 45 after kro. [Nana]
	* Fixed loading of AFMs when no resnametable is found. [Valaris]
	* mob_db.txt: Fixed Golden Thief Bug MVP MOB mode (it wasn't moving/attacking) [Lupus]
	* Added AFM (Advanced Fusion Map) support, thanks to alexkreuz and fusion. [Valaris]
	  Use the afm_dir option in grf-files.txt (currently needs a resnametable.txt). 
	* Initialized password variable in login.c. [Valaris]
	* Added zeny_from_mobs option. [Valaris]
	* Corrected the file type attribute on most of the files in three which fixes the
	  newline issues between linux and dos [MouseJstr]
              svn propset -R svn:eol-style native .
        * Skill changes [celest]
          - Corrected steal formula, updated BladeStop, Headcrush.

11/13
	* Fixed map-server loading, doesn't require data\resnametable.txt anymore [Wizputer]
	* Updated & Optimized TXT Login from FREYA. (need to do SQL now) [Codemaster]
	* Removed compile warnings in intif.c. [Valaris]
	* Fixed chrif_changesex and @changesex, now uses packet 0x3000. [MC Cameri]