@@ -307,6 +307,10 @@ spawn: 50
 monster: 50
 summon: 50
 
+// Spawns monster in small or big size.
+monstersmall: 50
+monsterbig: 50
+
 // Spawns a monster with parameters not in same order of @spawn.
 monster2: 50
 
