@@ -1,5 +1,9 @@
 Date	Added
 11/15
+	* Added small and big mob sprite spawning. [Valaris]
+	  -Added @monstersmall and @monstersmall commands.
+	  -For using in scripts, use id +2000 for small and id +4000 for big.
+	   (Example: 3002 for small poring and 5002 for big poring)
 	* Added mobs_level_up option. [Valaris]
 	  -Everytime a monster kills a play their level will increase and show levelup animation.
 	  -Their 6 main stats and speed will increase as they level.
